[package]
name = "axum-let"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["http2", "headers", "multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = [
    "cors",
    "trace",
    "limit",
    "request-id",
    "timeout",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
] }
redis = { version = "0.23", features = ["tokio-rustls-comp", "cluster"] }
bb8-redis = "0.13"
tokio-zookeeper = "0.2"

[profile.release]
panic = 'abort'
opt-level = 'z'
lto = true
debug = false
strip = 'debuginfo'
